--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,9 @@ export(emc_performance)
 export(emc_record)
 export(emc_replay)
 export(emc_resamples)
+export(emc_start_cluster)
+export(emc_stop_cluster)
 export(emc_t_test)
 export(emc_variable_degeneracy)
 export(emc_variable_distribution)
+export(emc_variable_importance)
